Fix canonical URL redirects for HTTP/HTTPS and www variants
- Add Express middleware to redirect HTTP → HTTPS
- Add Express middleware to redirect www → non-www
- Add Vercel redirects configuration for platform-level redirects
- Add canonical URL meta tag to HTML
- Canonical domain: https://thejobbridge-inc.com (non-www, HTTPS)
- Fixes SEO issue with protocol/www variants not redirecting

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,23 @@
   "outputDirectory": "dist/public",
   "installCommand": "npm install",
   "framework": null,
+  "redirects": [
+    {
+      "source": "http://www.thejobbridge-inc.com/:path*",
+      "destination": "https://thejobbridge-inc.com/:path*",
+      "permanent": true
+    },
+    {
+      "source": "http://thejobbridge-inc.com/:path*",
+      "destination": "https://thejobbridge-inc.com/:path*",
+      "permanent": true
+    },
+    {
+      "source": "https://www.thejobbridge-inc.com/:path*",
+      "destination": "https://thejobbridge-inc.com/:path*",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
