--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
   "outputDirectory": "dist/public",
   "installCommand": "npm install",
   "framework": null,
+  "functions": {
+    "api/index.ts": {
+      "maxDuration": 30
+    }
+  },
   "redirects": [
     {
       "source": "http://www.thejobbridge-inc.com/:path*",
