Fix invalid route source pattern in vercel.json
- Remove protocol-specific redirects (http://, https://) from source patterns
- Vercel redirects only support path patterns, not full URLs
- Domain redirects should be handled via Vercel domain settings
- Add HSTS header for HTTPS enforcement
- Keep rewrites for API and SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -9,23 +9,6 @@
       "maxDuration": 30
     }
   },
-  "redirects": [
-    {
-      "source": "http://www.thejobbridge-inc.com/:path*",
-      "destination": "https://thejobbridge-inc.com/:path*",
-      "permanent": true
-    },
-    {
-      "source": "http://thejobbridge-inc.com/:path*",
-      "destination": "https://thejobbridge-inc.com/:path*",
-      "permanent": true
-    },
-    {
-      "source": "https://www.thejobbridge-inc.com/:path*",
-      "destination": "https://thejobbridge-inc.com/:path*",
-      "permanent": true
-    }
-  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
@@ -34,6 +17,17 @@
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains"
+        }
+      ]
     }
   ]
 }
