--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
   "framework": null,
   "functions": {
     "api/index.ts": {
+      "runtime": "@vercel/node",
       "maxDuration": 30
     }
   },
