Fix Vercel deployment - remove invalid runtime, enable git deployment
- Remove invalid runtime specification (causes 'Function Runtimes must have a valid version' error)
- Only keep maxDuration setting for api/index.ts function
- Explicitly enable git deployment for main branch
- This commit should resolve the deployment issue

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,11 @@
       "maxDuration": 30
     }
   },
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
