Fix: Convert all @shared imports to relative imports for Vercel compatibility

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "imports": {
+    "@shared/*": {
+      "default": "./shared/*"
+    }
+  },
   "engines": {
     "node": ">=18.x"
   },
