--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
   "framework": null,
   "functions": {
     "api/index.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "runtime": "nodejs20.x"
     }
   },
   "git": {
