--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,7 @@
   "framework": null,
   "functions": {
     "api/index.ts": {
-      "maxDuration": 30,
-      "runtime": "nodejs20.x"
+      "maxDuration": 30
     }
   },
   "git": {
@@ -37,5 +36,3 @@
     }
   ]
 }
-
-
