Config: Add devCommand to vercel.json for Vercel preview support

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "installCommand": "npm install",
+  "devCommand": "npm run dev",
   "framework": null,
   "functions": {
     "api/index.ts": {
