--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@builder": {
+      "io/react": "^7.1.0",
+      "io/sdk": "^5.0.0"
+    },
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mixedbread-ai/sdk": "^2.2.11",
