--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@builder": {
-      "io/react": "^7.1.0",
-      "io/sdk": "^5.0.0"
-    },
+    "@builder.io/react": "^9.0.0",
+    "@clerk/clerk-react": "^5.58.1",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mixedbread-ai/sdk": "^2.2.11",
