--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@builder.io/react": "^9.0.0",
     "@clerk/clerk-react": "^5.58.1",
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mixedbread-ai/sdk": "^2.2.11",
