Fix Vercel module resolution - ensure shared schema is accessible
- Keep shared directory in api/ for Vercel serverless functions
- Update package.json exports for proper module resolution
- Vercel needs shared/ accessible at runtime

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "exports": {
     "@shared/schema": {
+      "types": "./shared/schema.ts",
       "default": "./shared/schema.ts"
     },
     "./shared/schema": {
+      "types": "./shared/schema.ts",
       "default": "./shared/schema.ts"
     }
   },
