--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "set-admin": "tsx scripts/set-admin.ts"
   },
   "dependencies": {
     "@builder.io/react": "^9.0.0",
