--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "migrate": "tsx scripts/run-migrations.ts",
     "set-admin": "tsx scripts/set-admin.ts"
   },
   "dependencies": {
