Add Contentful Management API (CMA) support for bidirectional syncing
- Install contentful-management package
- Add CMA client functions for creating/updating/deleting posts in Contentful
- Add 'Sync to Contentful' checkbox in admin blog form
- Add 'Also delete from Contentful' option in delete dialog
- Update API endpoints to support syncToContentful flag
- Update configuration guide with CMA token instructions

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "compression": "^1.8.1",
     "connect-pg-simple": "^10.0.0",
     "contentful": "^11.10.0",
+    "contentful-management": "^11.66.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
