--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "migrate": "tsx scripts/run-migrations.ts",
-    "set-admin": "tsx scripts/set-admin.ts"
+    "set-admin": "tsx scripts/set-admin.ts",
+    "import-blog-post": "tsx scripts/import-blog-post.ts"
   },
   "dependencies": {
     "@builder.io/react": "^9.0.0",
