--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/memoizee": "^0.4.12",
     "ai": "^5.0.112",
     "bcrypt": "^6.0.0",
+    "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
