--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
   },
   "overrides": {
     "esbuild": "^0.25.0",
-    "path-to-regexp": "^6.2.3",
+    "path-to-regexp": "0.1.7",
     "undici": "^6.20.0",
     "form-data": "^4.0.4"
   }
