--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "framework": null,
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  },
   "functions": {
     "api/index.ts": {
       "maxDuration": 30
